--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <main>
         <section class="event-list">
             <article>
-                <img src="../Images/journee sportive.png" alt="Journée Sportive" class="event-img">
+                <img src="Images/journee sportive.png" alt="Journée Sportive" class="event-img">
                 <h2>🏃‍♂️⚽ Journée Sportive</h2>
                 <h3>Jeudi 07 août à partir de 08H<br><span class="lieu">📍 Terrain Golden</span></h3>
                 <p>
@@ -28,7 +28,7 @@
                 </p>
             </article>
             <article>
-                <img src="../Images/soiree cine.png" alt="Soirée Ciné" class="event-img">
+                <img src="Images/soiree cine.png" alt="Soirée Ciné" class="event-img">
                 <h2>🎬🍿 Soirée Ciné</h2>
                 <h3>Vendredi 08 août à partir de 18H30<br><span class="lieu">📍 Terrain Golden</span></h3>
                 <p>
@@ -41,7 +41,7 @@
                 </p>
             </article>
             <article>
-                <img src="../Images/kermesse.png" alt="La Grande Kermesse" class="event-img">
+                <img src="Images/kermesse.png" alt="La Grande Kermesse" class="event-img">
                 <h2>🎠🎉 La Grande Kermesse</h2>
                 <h3>Jeudi 15 août de 11H à 17H<br><span class="lieu">📍 Terrain Golden</span></h3>
                 <p>
