--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <header>
-        <h1>Nos 3 Événements à ne pas manquer !</h1>
+        <h1>🎉 Les Événements Inoubliables du BJCP ! 🎊</h1>
+        <p style="color:#e67e22;font-size:1.1em;margin-top:0.5em;">Viens t’amuser, vibrer et partager des moments uniques avec nous !</p>
     </header>
     <main>
         <section class="event-list">
-            <article>
+            <article class="event-sportive">
                 <img src="Images/journee sportive.png" alt="Journée Sportive" class="event-img">
                 <h2>🏃‍♂️⚽ Journée Sportive</h2>
                 <h3>Jeudi 07 août à partir de 08H<br><span class="lieu">📍 Terrain Golden</span></h3>
@@ -27,7 +28,7 @@
                     </ul>
                 </p>
             </article>
-            <article>
+            <article class="event-cine">
                 <img src="Images/soiree cine.png" alt="Soirée Ciné" class="event-img">
                 <h2>🎬🍿 Soirée Ciné</h2>
                 <h3>Vendredi 08 août à partir de 18H30<br><span class="lieu">📍 Terrain Golden</span></h3>
@@ -40,7 +41,7 @@
                     </ul>
                 </p>
             </article>
-            <article>
+            <article class="event-kermesse">
                 <img src="Images/kermesse.png" alt="La Grande Kermesse" class="event-img">
                 <h2>🎠🎉 La Grande Kermesse</h2>
                 <h3>Jeudi 15 août de 11H à 17H<br><span class="lieu">📍 Terrain Golden</span></h3>
