--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,9 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 Présentation des Événements</p>
+        <p><strong>&copy; 2025 - All Right Reserved</strong></p>
+        <p><strong>Bureau des Jeunes des Cités A et B</strong></p>
+        <p><strong>En collaboration</strong></p>
     </footer>
     <script src="scripts/app.js"></script>
 </body>
