--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,19 @@
     <title>Event - BJCP</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="icon" href="src/Images/logo.jpeg">
+
+    <!-- Balises Open Graph pour l’aperçu sur les réseaux sociaux -->
+    <meta property="og:title" content="Les Événements Inoubliables du BJCP !" />
+    <meta property="og:description" content="Viens découvrir nos 3 événements festifs : Journée Sportive, Soirée Ciné et Grande Kermesse au Terrain Golden !" />
+    <meta property="og:image" content="https://event-bjcp.onrender.com/Images/logo.jpeg" />
+    <meta property="og:url" content="https://event-bjcp.onrender.com/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Les Événements Inoubliables du BJCP !" />
+    <meta name="twitter:description" content="Viens découvrir nos 3 événements festifs : Journée Sportive, Soirée Ciné et Grande Kermesse au Terrain Golden !" />
+    <meta name="twitter:image" content="https://ton-site.com/Images/journee%20sportive.png" />
 </head>
 <body>
     <header>
