Update - Ajout d'informations

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
             <article class="event-sportive">
                 <img src="Images/journee sportive.png" alt="Journée Sportive" class="event-img">
                 <h2>🏃‍♂️⚽ Journée Sportive</h2>
-                <h3>Jeudi 07 août à partir de 08H<br><span class="lieu">📍 Terrain Golden</span></h3>
+                <h3>Jeudi 07 août à partir 2025 de 08H<br><span class="lieu">📍 Terrain Golden</span></h3>
                 <p>
                     Venez bouger, vous challenger et vous amuser lors d'une journée sportive conviviale !<br>
                     <ul>
@@ -38,32 +38,35 @@
                         <li>🔹 Compétition de marathon</li>
                         <li>🔹 Tournois : football, handball, basketball</li>
                         <li>🔹 Collation & remise de prix</li>
+                        <li>🔹 <em>NB: Viens en tenue de sport, avec ta bouteille d’eau et ta bonne humeur !</em></li>
                     </ul>
                 </p>
             </article>
             <article class="event-cine">
                 <img src="Images/soiree cine.png" alt="Soirée Ciné" class="event-img">
                 <h2>🎬🍿 Soirée Ciné</h2>
-                <h3>Vendredi 08 août à partir de 18H30<br><span class="lieu">📍 Terrain Golden</span></h3>
+                <h3>Vendredi 08 août 2025 à partir de 18H30<br><span class="lieu">📍 Terrain Golden</span></h3>
                 <p>
                     Profitez d'une soirée détente sous les étoiles avec :<br>
                     <ul>
                         <li>🔸 Projection cinéma plein air</li>
                         <li>🔸 Popcorn & boissons offerts</li>
                         <li>🔸 Convivialité et bonne ambiance garanties !</li>
+                        <li>🔸 <em>NB: Apporte ta natte ou ton petit coussin pour plus de confort !</em></li>
                     </ul>
                 </p>
             </article>
             <article class="event-kermesse">
                 <img src="Images/kermesse.png" alt="La Grande Kermesse" class="event-img">
                 <h2>🎠🎉 La Grande Kermesse</h2>
-                <h3>Jeudi 15 août de 11H à 17H<br><span class="lieu">📍 Terrain Golden</span></h3>
+                <h3>Jeudi 15 août 2025 de 11H à 17H<br><span class="lieu">📍 Terrain Golden</span></h3>
                 <p>
                     Une journée “chill et fun” pour petits et grands :<br>
                     <ul>
                         <li>🔹 Jeux ludiques</li>
                         <li>🔹 Remise des prix</li>
                         <li>🔹 Show de clôture plein de surprises !</li>
+                        <li>🔹 <em>NB: Entrée libre – Viens avec tes amis, ta famille, et ton plus beau sourire !</em></li>
                     </ul>
                 </p>
             </article>
