Ajout de Google Analytics

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,15 @@
     <meta name="twitter:title" content="Les Événements Inoubliables du BJCP !" />
     <meta name="twitter:description" content="Viens découvrir nos 3 événements festifs : Journée Sportive, Soirée Ciné et Grande Kermesse au Terrain Golden !" />
     <meta name="twitter:image" content="https://ton-site.com/Images/journee%20sportive.png" />
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-T0Y9K4N2MQ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-T0Y9K4N2MQ');
+    </script>
 </head>
 <body>
     <header>
