--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,14 @@
     <meta property="og:url" content="https://event-bjcp.onrender.com/" />
     <meta property="og:type" content="website" />
 
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Les Événements Inoubliables du BJCP !" />
-    <meta name="twitter:description" content="Viens découvrir nos 3 événements festifs : Journée Sportive, Soirée Ciné et Grande Kermesse au Terrain Golden !" />
-    <meta name="twitter:image" content="https://ton-site.com/Images/journee%20sportive.png" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-T0Y9K4N2MQ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-T0Y9K4N2MQ');
+    </script>
 </head>
 <body>
     <div id="loader" role="status" aria-live="polite">
@@ -93,7 +96,7 @@
             loader.classList.add('hide');
             setTimeout(() => {
                 loader.style.display = 'none';
-            }, 800); // attend la transition
+            }, 800);
         });
     </script>
 </body>
