--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
                     <li>🔹 Show de clôture plein de surprises !</li>
                     <li>🔹 <strong>NB: Entrée libre – Viens avec tes amis, ta famille, et ton plus beau sourire !</strong></li>
                 </ul>
-                <a href="annee-60.html">Participer au Défilé Années 60</a>
+                <a class="btn" href="annee-60.html">Participer au Défilé Années 60</a>
             </article>
         </section>
     </main>
