--- a/src/pages/annee-60.html
+++ b/src/pages/annee-60.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Défilé Années 60 - BJCP</title>
     <link rel="stylesheet" href="../styles/main.css">
-    <link rel="icon" href="../Images/logo.jpeg">
-    <link rel="apple-touch-icon" href="../Images/logo.jpeg">
+    <link rel="icon" href="../Images/groovy.jpg">
+    <link rel="apple-touch-icon" href="../Images/groovy.jpg">
 
     <!-- Balises Open Graph pour l’aperçu sur les réseaux sociaux -->
     <meta property="og:title" content="Défilé Années 60 - BJCP !" />
