Modif du OG Image

--- a/src/pages/annee-60.html
+++ b/src/pages/annee-60.html
@@ -12,7 +12,7 @@
     <!-- Balises Open Graph pour l’aperçu sur les réseaux sociaux -->
     <meta property="og:title" content="Défilé Années 60 - BJCP !" />
     <meta property="og:description" content="Revivez le charme des années 60 !" />
-    <meta property="og:image" content="https://event-bjcp.onrender.com/Images/logo.jpeg" />
+    <meta property="og:image" content="https://event-bjcp.onrender.com/Images/groovy.jpg" />
     <meta property="og:url" content="https://event-bjcp.onrender.com/" />
     <meta property="og:type" content="event" />
 
