--- a/src/pages/annee-60.html
+++ b/src/pages/annee-60.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Défilé Années 60 - BJCP !" />
     <meta property="og:description" content="Revivez le charme des années 60 !" />
     <meta property="og:image" content="https://event-bjcp.onrender.com/Images/groovy.jpg" />
-    <meta property="og:url" content="https://event-bjcp.onrender.com/" />
+    <meta property="og:url" content="https://event-bjcp.onrender.com/pages/annee-60.html" />
     <meta property="og:type" content="event" />
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-T0Y9K4N2MQ"></script>
