--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <!-- Balises Open Graph pour l’aperçu sur les réseaux sociaux -->
     <meta property="og:title" content="Les Événements Inoubliables du BJCP !" />
     <meta property="og:description" content="Viens découvrir nos 3 événements festifs : Journée Sportive, Soirée Ciné et Grande Kermesse au Terrain Golden !" />
-    <meta property="og:image" content="https://event-bjcp.onrender.com/Images/logo.jpeg" />
+    <meta property="og:image" content="https://event-bjcp.onrender.com/Images/groovy.jpg" />
     <meta property="og:url" content="https://event-bjcp.onrender.com/" />
     <meta property="og:type" content="website" />
 
