--- a/src/index.html
+++ b/src/index.html
@@ -82,6 +82,7 @@
                     <li>🔹 <strong>NB: Entrée libre – Viens avec tes amis, ta famille, et ton plus beau sourire !</strong></li>
                 </ul>
                 <a href="pages/annee-60.html">Participer au Défilé Années 60</a>
+                <a href="pages/la-chasse.html">Participer à la Chasse au Trésor</a>
             </article>
         </section>
     </main>
