--- a/src/pages/la-chasse.html
+++ b/src/pages/la-chasse.html
@@ -12,7 +12,7 @@
     <!-- Balises Open Graph pour l’aperçu sur les réseaux sociaux -->
     <meta property="og:title" content="Chasse au Trésor - BJCP !" />
     <meta property="og:description" content="Participez à une aventure palpitante !" />
-    <meta property="og:image" content="https://event-bjcp.onrender.com/Images/la-chasse.jpg" />
+    <meta property="og:image" content="https://event-bjcp.onrender.com/Images/og-chase.jpg" />
     <meta property="og:url" content="https://event-bjcp.onrender.com/pages/la-chasse.html" />
     <meta property="og:type" content="event" />
 
